# PyGIMP

./: gimp_script_config.json  pyproject.toml  setup.py
.github/workflows/: publish-to-pypi.yml
.harmon_ai/: README_template.md  repository_summary_raw.md  sections_template_llm.md
docs/: .sourcesage_releasenotes.yml
script/: gimp_script_template.py
