[tool.poetry]
name = "pygimp-labs"
version = "0.1.1"
description = "PythonでGIMPスクリプトを操作するためのパッケージ"
authors = ["Maki <sunwood.ai.labs@gmail.com>"]
readme = "README.md"
license = "MIT"  # ライセンスを追加（適切なライセンスに変更してください）
homepage = "https://github.com/Sunwood-ai-labs/PyGIMP-Labs"  # GitHubリポジトリのURLを追加
repository = "https://github.com/Sunwood-ai-labs/PyGIMP-Labs"

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.2"
art = "^6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pygimp = "pygimp.cli:main"  # コマンドライン名も更新

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Sunwood-ai-labs/PyGIMP-Labs/issues"

[tool.poetry.classifiers]
"Development Status" = "3 - Alpha"
"Intended Audience" = "Developers"
"Topic" = "Software Development :: Libraries :: Python Modules"
"License" = "MIT License"
"Programming Language" = "Python :: 3"
"Programming Language" = "Python :: 3.12"
